--- a/peticiones_al_servidor/servidor.html
+++ b/peticiones_al_servidor/servidor.html
@@ -22,12 +22,20 @@
     <h3>Número de repositorios</h3>
     <span class="number_of_rep"></span>-->
 
-    <!--Ejercicio 4-->
+    <!--Ejercicio 4
 
     <input type="text" name="input" id="input">
     <button type="submit" class="button">Buscar</button>
     <span></span>
+    <ul></ul>-->
+
+    <!--Ejercicio 5
+    <ul></ul>-->
+
+    <input type="text" name="userName" id="name" value="">
+    <button class="button" type="submit">Buscar</button>
     <ul></ul>
+
     <script src="./servidor.js"></script>
 </body>
 
