--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -12,7 +12,7 @@
 <body>
     <!--Ejercicio 1
         <ul class="list"></ul>-->
-    <!--Ejercicio 2-->
+    <!--Ejercicio 2
     <Span>Que ciudad te gustaría visitar?</Span>
     <select name="form" id="form">
         <option value="Madrid">Madrid</option>
@@ -23,6 +23,22 @@
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
+    </div>-->
+    <!--Ejercicio 3-->
+    <div class="main">
+        <span>Elige un nombre</span>
+        <select name="form" id="form">
+            <option value="">Nombre</option>
+            <option value="Anna">Anna</option>
+            <option value="Lila">Lilla</option>
+            <option value="Sara">Sara</option>
+        </select>
+        <label for="firstname">Nombre</label>
+        <input type="text" name="firstname" id="firstname">
+        <label for="secondname">Apellidos</label>
+        <input type="text" name="secondname" id="secondname">
+        <label for="num">Teléfono</label>
+        <input type="tel" name="num" id="num">
     </div>
     <script src="./dom.js"></script>
 </body>
