--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -24,7 +24,7 @@
         <img src="" alt="">
         <img src="" alt="">
     </div>-->
-    <!--Ejercicio 3-->
+    <!--Ejercicio 3
     <div class="main">
         <span>Elige un nombre</span>
         <select name="form" id="form">
@@ -39,6 +39,11 @@
         <input type="text" name="secondname" id="secondname">
         <label for="num">Teléfono</label>
         <input type="tel" name="num" id="num">
+    </div>-->
+    <!--Ejercicio 6-->
+    <div class="container">
+        <span class="texto"></span>
+
     </div>
     <script src="./dom.js"></script>
 </body>
