--- a/asincronía/as.html
+++ b/asincronía/as.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <p class="time">0</p>
+    <!--<p class="time">0</p>-->
+    <!--<p class="msg"></p>-->
+
+    <button class="start">Start count!</button>
+    <input type="text" id="txt">
+    <button class="stop">Stop count!</button>
     <script src="./as.js"></script>
 </body>
 
